--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <section>
-            <img src="./assets/img/svg/logo_big.svg" al t="Logo">
+            <img src="./assets/img/svg/logo_small.svg" al t="Logo">
             <form>
                 <input type="text" size=50">
                 <button><img src="./assets/img/search.png" alt="searchIcon"></button>
@@ -54,15 +54,26 @@
             <h1>Huile de soin cheveux bio</h1>
 
             <ul>
-                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
-                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
-                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
-                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
-                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                <li><img class="feuille" src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                <li><img class="feuille" src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                <li><img class="feuille" src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                <li><img class="feuille" src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                <li><img class="feuille" src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
             </ul>
 
             <p>Une huile qui fortifie, nourrit, répare, fait briller et discipline les cheveux au naturel en toute simplicité</p>
             <p>7,90€</p>
+            
+            <form action="">
+                <div>
+                    <img src="./assets/img/moins.png" alt="moins">
+                    <input type="text">
+                    <img src="./assets/img/plus.png" alt="plus">
+                </div>
+
+                <button type="submit">Ajouter au panier</button>
+                <button><img src="./assets/img/picto_fav.png" alt="bouton favori"></button>
+            </form>
             
         </section>
 
