--- a/index2.html
+++ b/index2.html
@@ -213,6 +213,108 @@
 
         <section>
             <h2>Avis</h2>
+            <article>
+                <section>
+                    <ul>
+                        <li>
+                            <ol>
+                                <li>8</li>
+                                <li>/</li>
+                                <li>10</li>
+                            </ol>
+                        </li>
+                        <li>
+                            basée sur 94 avis
+                        </li>
+                        <li>
+                            <ol>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                            </ol>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <ul>
+                        <li>
+                            <ol>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li>57 avis</li>
+                            </ol>
+                        </li>
+                        <li>
+                            <ol>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li>31 avis</li>
+                            </ol>
+                        </li>
+                        <li>
+                            <ol>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li>5 avis</li>
+                            </ol>
+                        </li>
+                        <li>
+                            <ol>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li>1 avis</li>
+                            </ol>
+                        </li>
+                        <li>
+                            <ol>
+                                <li><img src="./assets/img/picto_feuille.png" alt="feuille"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li><img src="./assets/img/picto_feuilleOutline.png" alt="feuilleOutline"></li>
+                                <li>0 avis</li>
+                            </ol>
+                        </li>
+                    </ul>
+                </section>
+            </article>
+
+            <article>
+
+            </article>
+        </section>
+
+        <section>
+            <figure>
+                <img src="./assets/img/svg/promesse_heart.svg" alt="coeur">
+                <figcaption> Satisfait ou échangé</figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/svg/promesse_leaf.svg" alt="feuille">
+                <figcaption> 100% naturel</figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/svg/promesse_truck.svg" alt="camion">
+                <figcaption> Livraison en 48H</figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/svg/promesse_padlock.svg" alt="cadenas">
+                <figcaption> Paiement sécurisé </figcaption>
+            </figure>
         </section>
 
 
@@ -220,7 +322,19 @@
     </main>
 
     <footer>
+        <ul>
+            <li>Cosmétiques naturel & bio</li>
+            <li>Huiles essentielles & aromathérapie</li>
+            <li>Maison au naturel</li>
+            <li>L'art du fait maison</li>
+        </ul>
 
+        <ul>
+            <li>Nous contacter</li>
+            <li>Besoin d'aide ?</li>
+            <li>FAQ</li>
+            <li>Notre blog</li>
+        </ul>
     </footer>
 
     <script src="./../assets/js/main.js"></script>
