--- a/index2.html
+++ b/index2.html
@@ -322,19 +322,53 @@
     </main>
 
     <footer>
-        <ul>
-            <li>Cosmétiques naturel & bio</li>
-            <li>Huiles essentielles & aromathérapie</li>
-            <li>Maison au naturel</li>
-            <li>L'art du fait maison</li>
-        </ul>
+        <section>
+            <ul>
+                <li>Cosmétiques naturel & bio</li>
+                <li>Huiles essentielles & aromathérapie</li>
+                <li>Maison au naturel</li>
+                <li>L'art du fait maison</li>
+            </ul>
 
+            <ul>
+                <li>Nous contacter</li>
+                <li>Besoin d'aide ?</li>
+                <li>FAQ</li>
+                <li>Notre blog</li>
+            </ul>
+
+            <ul>
+                <li>Notre newseletter</li>
+                <li>
+                    <form action="#">
+                        <input type="text" placeholder="Votre adresse mail" size="50">
+                        <button type="submit">Je m'inscris</button>
+                    </form>
+                </li>
+                <li>Nos réseaux sociaux</li>
+                <li>
+                    <ol>
+                        <li><a href="#"><img src="./assets/img/rsn/facebook.png" alt="facebook"></a></li>
+                        <li><a href="#"><img src="./assets/img/rsn/twitter.png" alt="twitter"></a></li>
+                        <li><a href="#"><img src="./assets/img/rsn/youtube.png" alt="youtube"></a></li>
+                        <li><a href="#"><img src="./assets/img/rsn/pinterest.png" alt="pinterest"></a></li>
+                    </ol>
+                </li>
+            </ul>
+    </section>
+
+    <section>
         <ul>
-            <li>Nous contacter</li>
-            <li>Besoin d'aide ?</li>
-            <li>FAQ</li>
-            <li>Notre blog</li>
-        </ul>
+            <li>2018 © Aromazone.</li>
+            <li>Tous droits résérvés</li>
+            <li><img src="./assets/img/visa.png" alt="visa"></li>
+            <li><img src="./assets/img/mastercard.png" alt="visa"></li>
+    </ul>
+    </section>
+
+    
+
+
     </footer>
 
     <script src="./../assets/js/main.js"></script>
